# usgs-quake-stream

./: CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
gcp/: .dockerignore  deploy.sh
gcp/bigquery/: schema.sql
gcp/dashboard/: Dockerfile  app.py  requirements.txt
gcp/dedup/: dedup_pipeline.py
gcp/ingester/: Dockerfile  bq_client.py  main.py  pipeline.py  requirements.txt
src/quake_stream/: cli.py  dashboard.py  dashboard_web.py  db.py  db_consumer.py  deduplicator.py  geo.py  models_v2.py  multi_producer.py  normalizer.py
src/quake_stream/clients/: __init__.py  fdsn_client.py
src/quake_stream/migrations/: 001_multi_source.sql
src/quake_stream/parsers/: __init__.py  base.py  emsc_geojson.py  fdsn_text.py  usgs_geojson.py
src/quake_stream/sources/: __init__.py
tests/: test_multi_source.py
